--- a/datenschutz.html
+++ b/datenschutz.html
@@ -81,6 +81,8 @@
 
         .logo { height: 40px; }
         .logo-link { display: flex; justify-content: center; }
+        [data-theme="light"] .logo { content: url('./assets/MurrMedien_schwarz.png'); }
+        [data-theme="light"] .footer-logo { content: url('./assets/MurrMedien_schwarz.png'); }
 
         .header-left {
             display: flex;
@@ -257,7 +259,6 @@
             height: 26px;
             width: auto;
             align-self: flex-start;
-            opacity: 0.55;
             display: block;
             margin-bottom: 16px;
         }
@@ -313,11 +314,15 @@
             opacity: 0.65;
         }
 
+        .footer-social-mobile { display: none; gap: 16px; margin-top: 16px; }
+
         @media (max-width: 520px) {
             header { padding: 18px; }
             main { padding: 36px 18px 60px; }
             .footer-inner { flex-direction: column; gap: 32px; }
             .footer-cols { gap: 32px; }
+            .header-left { display: none; }
+            .footer-social-mobile { display: flex; }
         }
     </style>
 </head>
@@ -461,6 +466,22 @@
                 <p>Murr Medien GbR<br>Amselweg 5 · 71570 Oppenweiler</p>
                 <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a><br>
                 <a href="tel:+4915566152739">+49 155 66152739</a></p>
+                <div class="footer-social-mobile">
+                    <a href="https://www.instagram.com/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
+                        <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                            <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.7"/>
+                            <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.7"/>
+                            <circle cx="17.5" cy="6.5" r="1" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/company/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn">
+                        <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                            <rect x="2" y="2" width="20" height="20" rx="4" stroke="currentColor" stroke-width="1.7"/>
+                            <path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
+                            <circle cx="7" cy="7" r="1" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
             </div>
             <div class="footer-cols">
                 <div class="footer-col">
