--- a/index.html
+++ b/index.html
@@ -93,12 +93,8 @@
             display: grid;
             grid-template-columns: 1fr auto 1fr;
             align-items: center;
-            position: sticky;
-            top: 0;
+            position: relative;
             z-index: 300;
-            background: color-mix(in srgb, var(--bg) 80%, transparent);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
         }
 
         .logo { height: 40px; }
