--- a/impressum.html
+++ b/impressum.html
@@ -53,9 +53,12 @@
 
         * { box-sizing: border-box; }
 
+        html { overflow-x: hidden; }
+
         body {
             margin: 0;
             min-height: 100vh;
+            overflow-x: hidden;
             font-family: "Jost", system-ui, sans-serif;
             color: var(--text);
             background: var(--bg);
