--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
 
         * { box-sizing: border-box; }
 
+        html { overflow-x: hidden; }
+
         body {
             margin: 0;
             min-height: 100vh;
+            overflow-x: hidden;
             font-family: "Jost", system-ui, sans-serif;
             color: var(--text);
             background: var(--bg);
@@ -320,8 +323,15 @@
             .hero-project {
                 flex: 0 0 80vw;
             }
+            .leistungen-grid {
+                grid-template-columns: 1fr 1fr;
+            }
             .contact-grid {
                 grid-template-columns: 1fr 1fr;
+            }
+            .contact-avatar {
+                width: 90px;
+                height: 110px;
             }
         }
 
